style.css
/* ... */
#wrapper .checkout-cart {
	margin-left: auto; /* move the shopping cart to the right, 
										 specified this so that the shopping cart in the style guide won't align to the right
										 side */

}

#checkout-decoration { /* the drawing on top of the checkout cart */
	text-align: center;
}

#checkout-decoration img{
	margin-top: -2rem;
}

.checkout-cart h2 {
	margin-top: 0;
}

.checkout-cart p {
	padding-right: 0.5rem;
	margin-top: 0.2rem;
	margin-bottom: 1rem;
	
}

/* cart-description consist of "YOUR ORDER" and the text under it */
.cart-description h2 { 
	text-align: center;
	margin-bottom: 1rem;
}

.cart-description p{
	padding-left: 2rem;
	padding-right: 2rem;
}


.cart-list { /* cart list consist of all the items in checkout and the subtotal section under it */
	background-color: #F9F9F9;
	border-radius: 1rem;
	padding: 2rem 1rem 1rem;
	margin-bottom: 2rem;
}

.cart-item{ /* individual items in the checkout cart */
	display: grid;
	grid-template-columns: auto 1fr auto; 
	border-bottom: 1px solid #D8D8D8;
	grid-gap: 1rem;
	padding-bottom: 0.7rem;
	margin-bottom: 1rem;
}

.cart-item-left img{
	width: 60px;
}

.cart-item-middle {
	grid-column: 2; 
  }

.cart-add-or-subtract { /* make the + and - button side by side */
	display: flex;
}

.cart-item-right {
	text-align: right;
}

.cart-item-right .cart-item-quantity{ /* move the total item quantity a bit down so it looks better*/
	margin-top: 1.4rem;
	margin-bottom: 0;
}

.cart-list-total {
	display: grid;
	grid-template-columns: 3fr 1fr;
}

.cart-list-total-right {
	text-align: right;
}

/* ----------------------- PRODUCT LISTING PAGE Related ---------------------------*/
#macarons-wrapper { /* for everything under the navigation bar */
	margin-top: 5rem;
	margin-bottom: 5rem;
	margin-left: 12%;
	margin-right: 8%;
	display: grid;
	grid-template-areas: 
		"a a b";
}

#macaron-page-left{ 
	grid-area: a;
}
#macaron-page-right{
	padding-right: 2rem;
	padding-left:6rem;
	grid-area: b;
	padding-top:6rem;
}

  .item-section-title {
  	display: flex;
  }

  .item-section-title h1 {
  	margin-top: 0;
  	margin-bottom: 3rem;
  }

  .item-section-title p {
  	padding-top: 0.5rem;
  	margin-left: 2rem;
	color:#FF5998;
  }

  .item-section {
  	display: grid;
		grid-template-rows: 1fr 1fr 1fr;
		grid-template-columns: 1fr 1fr 1fr;
		row-gap: 2rem;
		column-gap: 2rem;
  }

  .item-listing {
	position: relative;	
	padding-bottom: 30px; /* Adjust based on the size of your link */
  }

  .item-listing img{
  	width: 200px;
  	margin-bottom: -1.5rem;
	transition: 0.3s;
  }


  .item-listing .add-order-button input {
	position: absolute;
	display: none;
	top: 25%;
	left: 50%;
	transform: translate(-50%, -50%);
}

  .item-listing p{
  	margin-top: -1rem;
  	max-width: 200px;
  }

#lemon-tree-link{ /* hides the 'LOOK INSIDE' text */
  display: none;
  position: absolute;
  bottom: 0;
  left:20%;
}

.item-listing:hover #lemon-tree img {
	filter: blur(2px);
}

.item-listing:hover .add-order-button input {
	display:block;
	z-index: 2;
}

.item-listing:hover #lemon-tree-link { /* unhides the 'LOOK INSIDE' text */
  display: block;
  color: #FF5998;
  margin-top: 0.5rem;
}

@media screen and (max-width: 1200px) {
	#wrapper {
	  grid-template-areas: 
	  "a"
	  "b";
	}
	.item-listing img {
	  width: 150px;
	}
	#macaron-page-right {
	  padding-top: 0rem;
	  padding-left: 2rem; 
	  padding-right: 2rem;
	}
	#macaron-page-left {
	  padding-bottom: 0;
	  padding-left: 2rem; 
	}
  }


@media screen and (max-width: 800px) {
	#macarons-wrapper {
		grid-template-areas: 
		"a"
		"b";
	}
	#macarons-wrapper .checkout-cart {
		margin-left: 0;
	}
	#macaron-page-left {
		padding-bottom: 0;
		padding-left:0rem;
	}

	.item-listing img{
  	width: 150px;
  }

	.item-section {
    display: grid;
    grid-template-rows: 1fr 1fr 1fr ;
    grid-template-columns: 1fr 1fr;
	}
}

/* ----------------------- PRODUCT DETAIL PAGE Related ---------------------------*/

.container {
    display: flex;
    max-width: 40rem;
    margin-right: 5rem; /* Remove margin */
}

.left-container {
    flex: 1;
    margin-right: calc(((100vw - 800px) / 8)); /* Initial right margin */
}

.product-detail-header {
    display: flex;
    align-items: center;
    margin-bottom: 3rem;
}

.product-detail-header img {
    width: 20px;
    margin-right: 10px;
}

.left-container img {
    width: 400px;
    height: auto;
}

.right-container {
    flex: 1;
    max-width: 15rem;
    margin-left: auto; /* Move right container to the end */
	position: relative; /* Added */

}

.right-container .subsection {
    margin-bottom: 20px;
}

.right-container h3 {
    margin: 0;
}

.right-container p {
    margin-top: 5px;
}

  
  /* Drawing */
  .drawing {
	position: absolute;
	/* Adjust the left position as needed */
	width: 200px; /* Adjust width as needed */
	height: 200px; /* Adjust height as needed */
	z-index: 6;
	left:-11rem;
	top:3rem;
  }
  
  @media screen and (max-width: 768px) {

	.left-container img {
		margin-top: -3rem;
		width: 300px;
		height: auto;
	}
	
	.drawing {
	  opacity: 0;
	}
  }

/* ----------------------- HOME PAGE Related ---------------------------*/

.build-your-order-button {
	font-family: 'Poppins', sans-serif;
	font-size: 20px;
	text-decoration: none;
	background-color: #4F2208;
	border-radius: 0.3rem;
	border-style: solid;
	border-color: #4F2208;
	color: white;
	cursor: pointer;
	width: 100%;
	padding: 1rem;
	margin-top: 2rem;
	transition: color 0.3s ease, border-color 0.3s ease; /* Add transition for color and border-color */
}

.build-your-order-button:hover{
	background-color: white;
	color:#4F2208;
	border-color: #4F2208;
}

	#home-wrapper { /* for everything under the navigation bar */
		margin-left: 8%;
	  margin-right: 8%;
	}

  .home-container {
	display: flex;
	justify-content: space-between;
  }
  
  .home-horizontal-container {
  width: 100%;
	padding-top: 2rem;
	padding-bottom: 3rem;
	justify-content: space-between;
  }
/* ... */

